--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,7 +27,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       env:
-        USE_LIVE_MAIL: ${{ secrets.USE_LIVE_MAIL }}
+        USE_LIVE_MAIL: ${{ secrets.DEBUG }}
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         DEBUG: ${{ secrets.DEBUG }}
         BACKEND_HOST: ${{ secrets.BACKEND_HOST }}
